# cis194-fall-16

./: README.md
01-intro/: cis194-w01.cabal
01-intro/app/: Main.hs
01-intro/src/: Exercise1.hs  Exercise2.hs  Exercise3.hs
02-ho-datatypes/: cis194-w02.cabal  stack.yaml
02-ho-datatypes/src/: Exercise1.hs  Exercise2.hs  Exercise3.hs
02-ho-datatypes/test/: Spec.hs
03-polymorphism/: cis194-w03.cabal
03-polymorphism/app/: Main.hs
03-polymorphism/src/: Exercise.hs
03-polymorphism/test/: Spec.hs
04-typeclasses/: cis194-w04.cabal  stack.yaml
04-typeclasses/app/: Main.hs
04-typeclasses/src/: Exercise1.hs  Exercise2.hs  Exercise3.hs  Exercise4.hs  List.hs  Mazes.hs  Sokoban.hs
04-typeclasses/test/: Spec.hs
w01/: README.md  cis194-w01.cabal  haskell-book-notes.txt  stack.yaml
w01/app/: Main.hs
w01/src/: HanoiDisplay.hs  Homework.hs  Homework1.hs  Homework2.hs  Homework3.hs  Lecture.hs  Spring13Homework1.hs  Spring13Homework2.hs
w01/test/: Spec.hs
w02/: README.md  cis194-w02.cabal  stack.yaml
w02/app/: Main.hs
w02/src/: Homework1.hs  Homework2.hs  Homework3.hs  Lecture.hs
w03/: README.md  cis194-w03.cabal  stack.yaml
w03/src/: Homework.hs  Lecture.hs
w03/test/: Spec.hs
