name:                cis194-w03
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cis194-w03#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lecture
                     , Exercise
  build-depends:       base >= 4.7 && < 5
                     , codeworld-api == 0.2.0.0
                     , text == 1.2.2.1
  default-language:    Haskell2010

executable cis194-w03-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cis194-w03
  default-language:    Haskell2010

test-suite cis194-w03-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec == 2.4.1
                     , cis194-w03
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cis194-w03
